--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "shortid": "^2.2.16"
